added responsive styles

--- a/index.html
+++ b/index.html
@@ -10,70 +10,76 @@
 </head>
 <body>
     <header>
-        <!-- Navigation Start -->
-        <nav>
-            <div class="logo">
-                <img src="./images/logo.png" alt="logo">
-            </div>
-            <div class="nav-right">
-                <ul class="navigation">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Pages</a></li>
-                    <li><a href="#">Agent</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Subscribe</a></li>
-                </ul>
-                <button>Let's Talk</button>
-            </div>
-        </nav>
-        <!-- Navigation End -->
+        <div class="container">
+            <!-- Navigation Start -->
+            <nav>
+                <div class="logo">
+                    <img src="./images/logo.png" alt="logo">
+                </div>
+                <div class="btn-mobileMenu">
+                    <i class="fa-solid fa-bars"></i>
+                </div>
+                <div class="nav-right">
+                    <ul class="navigation">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Pages</a></li>
+                        <li><a href="#">Agent</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Subscribe</a></li>
+                    </ul>
+                    <button>Let's Talk</button>
+                </div>
+            </nav>
+            <!-- Navigation End -->
 
-        <!-- Hero Start -->
-        <div class="hero">
-            <div class="hero-img">
-                <img src="./images/hero.jpg" alt="hero">
-            </div>
-            <div class="hero-content">
-                <h1>Empowering your<br>business with the<br>best solution</h1>
-                <div class="hero-content-bottom">
-                    <p>We connect your brand & business with the target market in the most desireable, refined and elevated way possible through digital medium.</p>
-                    <form>
-                        <i class="fa-solid fa-envelope"></i>
-                        <input type="text" placeholder="Enter your email address">
-                        <button>Let's talk</button>
-                    </form>
+            <!-- Hero Start -->
+            <div class="hero">
+                <div class="hero-img">
+                    <img src="./images/hero.jpg" alt="hero">
+                </div>
+                <div class="hero-content">
+                    <h1>Empowering your<br>business with the<br>best solution</h1>
+                    <div class="hero-content-bottom">
+                        <p>We connect your brand & business with the target market in the most desireable, refined and elevated way possible through digital medium.</p>
+                        <form>
+                            <i class="fa-solid fa-envelope"></i>
+                            <input type="text" placeholder="Enter your email address">
+                            <button>Let's talk</button>
+                        </form>
+                    </div>
                 </div>
             </div>
+            <!-- Hero End -->
         </div>
-        <!-- Hero End -->
     </header>
     <!-- Header End -->
-
+    
     <!-- Connect Section Start -->
 
     <section class="connect">
-        <h2 class="title">We Connect your businesses<br>with your target</h2>
-        <div class="connect-details">
-            <div class="detail-box">
-                <strong>1,093</strong>
-                <p>Finished Project</p>
+        <div class="container">
+            <h2 class="title">We Connect your businesses<br>with your target</h2>
+            <div class="connect-details">
+                <div class="detail-box">
+                    <strong>1,093</strong>
+                    <p>Finished Project</p>
+                </div>
+                <div class="detail-box">
+                    <strong>3,355</strong>
+                    <p>Enrolled Project</p>
+                </div>
+                <div class="detail-box">
+                    <strong>40</strong>
+                    <p>Team Worker</p>
+                </div>
+                <div class="detail-box">
+                    <strong>90%</strong>
+                    <p>Satisfaction Rate</p>
+                </div>
             </div>
-            <div class="detail-box">
-                <strong>3,355</strong>
-                <p>Enrolled Project</p>
+            <div class="connect-image">
             </div>
-            <div class="detail-box">
-                <strong>40</strong>
-                <p>Team Worker</p>
-            </div>
-            <div class="detail-box">
-                <strong>90%</strong>
-                <p>Satisfaction Rate</p>
-            </div>
-        </div>
-        <div class="connect-image">
-            <img src="./images/connect-img.jpg" alt="connect-img" />
         </div>
     </section>
 
@@ -82,15 +88,17 @@
     <!-- WebDev Start -->
 
     <section class="webdev">
-        <h2 class="title">We have made your<br>care easy for you</h2>
-        <div class="webdev-inner-wrapper">
-            <div class="content">
-                <h3>Effective Website Design<br>and Development</h3>
-                <p>By connecting patients all over the world to the best<br>instructors, Healthycare helping individuals reach their<br>goals and pursue their dreams</p>
-                <button class="btn-green">Let's Talk</button>
-            </div>
-            <div class="webdev-img-wrapper">
-                <img src="./images/webdev-img.jpg" alt="web dev" class="section-img">
+        <div class="container">
+            <h2 class="title">We have made your<br>care easy for you</h2>
+            <div class="webdev-inner-wrapper">
+                <div class="content">
+                    <h3><span>Effective Website Design</span> <span>and Development</span></h3>
+                    <p>By connecting patients all over the world to the best<br>instructors, Healthycare helping individuals reach their<br>goals and pursue their dreams</p>
+                    <button class="btn-green">Let's Talk</button>
+                </div>
+                <div class="webdev-img-wrapper">
+                    <img src="./images/webdev-img.jpg" alt="web dev" class="section-img">
+                </div>
             </div>
         </div>
     </section>
@@ -100,14 +108,16 @@
     <!-- Digital Marketing Start-->
 
     <section class="digital-marketing">
-        <div class="dgm-inner-wrapper">
-            <div class="dgm-img-wrapper">
-                <img src="./images/dgm.jpg" alt="dgm" class="section-img">
-            </div>
-            <div class="content">
-                <h3>We Give Proven Digital<br>Marketing Strategies for<br>Our Clients</h3>
-                <p>Consultant working hard and we collaborate with<br>organizations that are keen to transform the legal industry,<br>reach their goals and pursue their dreams.</p>
-                <button class="btn-green">Let's Talk</button>
+        <div class="container">
+            <div class="dgm-inner-wrapper">
+                <div class="dgm-img-wrapper">
+                    <img src="./images/dgm.jpg" alt="dgm" class="section-img">
+                </div>
+                <div class="content">
+                    <h3><span>We Give Proven Digital</span><span> Marketing Strategies for </span><span>Our Clients</span></h3>
+                    <p>Consultant working hard and we collaborate with<br>organizations that are keen to transform the legal industry,<br>reach their goals and pursue their dreams.</p>
+                    <button class="btn-green">Let's Talk</button>
+                </div>
             </div>
         </div>
     </section>
@@ -117,14 +127,16 @@
     <!-- First Impression Start -->
 
     <section class="first-impression">
-        <div class="fim-inner-wrapper">
-            <div class="content">
-                <h3>People Will Always Judge<br>the book by it's cover</h3>
-                <p>By connecting patients all over the world to the best<br>instructors, Healthycare helping individuals reach their<br>goals and pursue their dreams</p>
-                <button class="btn-green">Let's Talk</button>
-            </div>
-            <div class="fim-img-wrapper">
-                <img src="./images/fim.jpg" alt="fim" class="section-img">
+        <div class="container">
+            <div class="fim-inner-wrapper">
+                <div class="content">
+                    <h3><span>People Will Always Judge</span> <span>the book by it's cover</span></h3>
+                    <p>By connecting patients all over the world to the best<br>instructors, Healthycare helping individuals reach their<br>goals and pursue their dreams</p>
+                    <button class="btn-green">Let's Talk</button>
+                </div>
+                <div class="fim-img-wrapper">
+                    <img src="./images/fim.jpg" alt="fim" class="section-img">
+                </div>
             </div>
         </div>
     </section>
@@ -134,29 +146,31 @@
     <!-- Team Section Start -->
 
     <section class="our-team">
-        <div class="team-header">
-            <h2>Meets our great<br>Creative Teams</h2>
-            <p>Our journey began with a simple idea make a simple journey make this world more function. We collaborate with organizations that are keen to transform.</p>
-        </div>
-        <div class="team-info">
-            <div class="team-card">
-                <img src="./images/team-1.jpg" alt="amera" class="member-img">
-                <h3 class="name">Amera Amanda</h3>
-                <p>Introduction start procrasninate 2 hours get to work get to do work while eating</p>
+        <div class="container">
+            <div class="team-header">
+                <h2>Meets our great<br>Creative Teams</h2>
+                <p>Our journey began with a simple idea make a simple journey make this world more function. We collaborate with organizations that are keen to transform.</p>
             </div>
-            <div class="team-card">
-                <img src="./images/team-2.jpg" alt="lucas" class="member-img">
-                <h3 class="name">Lucas Podolski</h3>
-                <p>Introduction start procrasninate 2 hours get to work get to do work while eating</p>
+            <div class="team-info">
+                <div class="team-card">
+                    <img src="./images/team-1.jpg" alt="amera" class="member-img">
+                    <h3 class="name">Amera Amanda</h3>
+                    <p>Introduction start procrasninate 2 hours get to work get to do work while eating</p>
+                </div>
+                <div class="team-card">
+                    <img src="./images/team-2.jpg" alt="lucas" class="member-img">
+                    <h3 class="name">Lucas Podolski</h3>
+                    <p>Introduction start procrasninate 2 hours get to work get to do work while eating</p>
+                </div>
+                <div class="team-card">
+                    <img src="./images/team-3.jpg" alt="leny" class="member-img">
+                    <h3 class="name">Leny Marissa Nasution</h3>
+                    <p>Introduction start procrasninate 2 hours get to work get to do work while eating</p>
+                </div>
             </div>
-            <div class="team-card">
-                <img src="./images/team-3.jpg" alt="leny" class="member-img">
-                <h3 class="name">Leny Marissa Nasution</h3>
-                <p>Introduction start procrasninate 2 hours get to work get to do work while eating</p>
+            <div class="team-footer">
+                <button class="btn-green">See More</button>
             </div>
-        </div>
-        <div class="team-footer">
-            <button class="btn-green">See More</button>
         </div>
     </section>
 
@@ -165,7 +179,8 @@
     <!-- Footer Start -->
 
     <footer>
-        <div class="footer-container">
+        <div class="container">
+            <div class="footer-container">
             <div class="footer-top">
                 <img src="./images/logo.png" alt="footer-logo">
                 <div class="social-links">
@@ -213,6 +228,7 @@
                     <p>For Benchmark</p>
                     <p>For Small Business</p>
                 </div>
+            </div>
             </div>
         </div>
     </footer>
